--- a/index.html
+++ b/index.html
@@ -1,146 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gmail TaskPro API</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <title>TaskPro Swagger UI</title>
+    <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
+    <link rel="stylesheet" type="text/css" href="dist/index.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="dist/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="dist/favicon-16x16.png"
+      sizes="16x16"
+    />
   </head>
   <body>
-    <p>Gmail TaskPro API</p>
-
-    <!--Add buttons to initiate auth sequence and sign out-->
-    <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
-
-    <pre id="content" style="white-space: pre-wrap"></pre>
-
-    <script type="text/javascript">
-      const CLIENT_ID =
-        '314670454182-c0q4bsn3lr9c19fflhs4oa4rvvetmsgm.apps.googleusercontent.com';
-      const API_KEY = '46WBi3ToIhlyPxWUI151jcGAzAswi19r';
-
-      // Discovery doc URL for APIs used by the quickstart
-      const DISCOVERY_DOC =
-        'https://www.googleapis.com/discovery/v1/apis/gmail/v1/rest';
-
-      // Authorization scopes required by the API; multiple scopes can be
-      // included, separated by spaces.
-      const SCOPES = 'https://www.googleapis.com/auth/gmail.readonly';
-
-      let tokenClient;
-      let gapiInited = false;
-      let gisInited = false;
-
-      document.getElementById('authorize_button').style.visibility = 'hidden';
-      document.getElementById('signout_button').style.visibility = 'hidden';
-
-      /**
-       * Callback after api.js is loaded.
-       */
-      function gapiLoaded() {
-        gapi.load('client', initializeGapiClient);
-      }
-
-      /**
-       * Callback after the API client is loaded. Loads the
-       * discovery doc to initialize the API.
-       */
-      async function initializeGapiClient() {
-        await gapi.client.init({
-          apiKey: API_KEY,
-          discoveryDocs: [DISCOVERY_DOC],
-        });
-        gapiInited = true;
-        maybeEnableButtons();
-      }
-
-      /**
-       * Callback after Google Identity Services are loaded.
-       */
-      function gisLoaded() {
-        tokenClient = google.accounts.oauth2.initTokenClient({
-          client_id: CLIENT_ID,
-          scope: SCOPES,
-          callback: '', // defined later
-        });
-        gisInited = true;
-        maybeEnableButtons();
-      }
-
-      /**
-       * Enables user interaction after all libraries are loaded.
-       */
-      function maybeEnableButtons() {
-        if (gapiInited && gisInited) {
-          document.getElementById('authorize_button').style.visibility =
-            'visible';
-        }
-      }
-
-      /**
-       *  Sign in the user upon button click.
-       */
-      function handleAuthClick() {
-        tokenClient.callback = async (resp) => {
-          if (resp.error !== undefined) {
-            throw resp;
-          }
-          document.getElementById('signout_button').style.visibility =
-            'visible';
-          document.getElementById('authorize_button').innerText = 'Refresh';
-          await listLabels();
-        };
-
-        if (gapi.client.getToken() === null) {
-          // Prompt the user to select a Google Account and ask for consent to share their data
-          // when establishing a new session.
-          tokenClient.requestAccessToken({ prompt: 'consent' });
-        } else {
-          // Skip display of account chooser and consent dialog for an existing session.
-          tokenClient.requestAccessToken({ prompt: '' });
-        }
-      }
-
-      /**
-       *  Sign out the user upon button click.
-       */
-      function handleSignoutClick() {
-        const token = gapi.client.getToken();
-        if (token !== null) {
-          google.accounts.oauth2.revoke(token.access_token);
-          gapi.client.setToken('');
-          document.getElementById('content').innerText = '';
-          document.getElementById('authorize_button').innerText = 'Authorize';
-          document.getElementById('signout_button').style.visibility = 'hidden';
-        }
-      }
-
-      /**
-       * Print all Labels in the authorized user's inbox. If no labels
-       * are found an appropriate message is printed.
-       */
-      async function listLabels() {
-        let response;
-        try {
-          response = await gapi.client.gmail.users.labels.list({
-            userId: 'me',
-          });
-        } catch (err) {
-          document.getElementById('content').innerText = err.message;
-          return;
-        }
-        const labels = response.result.labels;
-        if (!labels || labels.length == 0) {
-          document.getElementById('content').innerText = 'No labels found.';
-          return;
-        }
-        // Flatten to string to display
-        const output = labels.reduce(
-          (str, label) => `${str}${label.name}\n`,
-          'Labels:\n'
-        );
-        document.getElementById('content').innerText = output;
-      }
-    </script>
+    <body>
+    <div id="swagger-ui"></div>
+    <script src="dist/swagger-ui-bundle.js" charset="UTF-8"> </script>
+    <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
+    <script src="dist/swagger-initializer.js" charset="UTF-8"> </script>
+  </body>
+    <!-- </script>
     <script
       async
       defer
@@ -155,8 +40,8 @@
     ></script>
     <script>
       var YOUR_CLIENT_ID =
-        '314670454182-c0q4bsn3lr9c19fflhs4oa4rvvetmsgm.apps.googleusercontent.com';
-      var YOUR_REDIRECT_URI = 'https://taskpro-backend-c73a.onrender.com';
+        "314670454182-c0q4bsn3lr9c19fflhs4oa4rvvetmsgm.apps.googleusercontent.com";
+      var YOUR_REDIRECT_URI = "https://taskpro-backend-c73a.onrender.com";
       var fragmentString = location.hash.substring(1);
 
       // Parse query string to see if page request is coming from OAuth 2.0 server.
@@ -167,8 +52,8 @@
         params[decodeURIComponent(m[1])] = decodeURIComponent(m[2]);
       }
       if (Object.keys(params).length > 0) {
-        localStorage.setItem('oauth2-test-params', JSON.stringify(params));
-        if (params['state'] && params['state'] == 'try_sample_request') {
+        localStorage.setItem("oauth2-test-params", JSON.stringify(params));
+        if (params["state"] && params["state"] == "try_sample_request") {
           trySampleRequest();
         }
       }
@@ -176,14 +61,14 @@
       // If there's an access token, try an API request.
       // Otherwise, start OAuth 2.0 flow.
       function trySampleRequest() {
-        var params = JSON.parse(localStorage.getItem('oauth2-test-params'));
-        if (params && params['access_token']) {
+        var params = JSON.parse(localStorage.getItem("oauth2-test-params"));
+        if (params && params["access_token"]) {
           var xhr = new XMLHttpRequest();
           xhr.open(
-            'GET',
-            'https://www.googleapis.com/drive/v3/about?fields=user&' +
-              'access_token=' +
-              params['access_token']
+            "GET",
+            "https://www.googleapis.com/drive/v3/about?fields=user&" +
+              "access_token=" +
+              params["access_token"]
           );
           xhr.onreadystatechange = function (e) {
             if (xhr.readyState === 4 && xhr.status === 200) {
@@ -204,29 +89,29 @@
        */
       function oauth2SignIn() {
         // Google's OAuth 2.0 endpoint for requesting an access token
-        var oauth2Endpoint = 'https://accounts.google.com/o/oauth2/v2/auth';
+        var oauth2Endpoint = "https://accounts.google.com/o/oauth2/v2/auth";
 
         // Create element to open OAuth 2.0 endpoint in new window.
-        var form = document.createElement('form');
-        form.setAttribute('method', 'GET'); // Send as a GET request.
-        form.setAttribute('action', oauth2Endpoint);
+        var form = document.createElement("form");
+        form.setAttribute("method", "GET"); // Send as a GET request.
+        form.setAttribute("action", oauth2Endpoint);
 
         // Parameters to pass to OAuth 2.0 endpoint.
         var params = {
           client_id: YOUR_CLIENT_ID,
           redirect_uri: YOUR_REDIRECT_URI,
-          scope: 'https://www.googleapis.com/auth/drive.metadata.readonly',
-          state: 'try_sample_request',
-          include_granted_scopes: 'true',
-          response_type: 'token',
+          scope: "https://www.googleapis.com/auth/drive.metadata.readonly",
+          state: "try_sample_request",
+          include_granted_scopes: "true",
+          response_type: "token",
         };
 
         // Add form parameters as hidden input values.
         for (var p in params) {
-          var input = document.createElement('input');
-          input.setAttribute('type', 'hidden');
-          input.setAttribute('name', p);
-          input.setAttribute('value', params[p]);
+          var input = document.createElement("input");
+          input.setAttribute("type", "hidden");
+          input.setAttribute("name", p);
+          input.setAttribute("value", params[p]);
           form.appendChild(input);
         }
 
@@ -236,5 +121,5 @@
       }
     </script>
     <button onclick="trySampleRequest();">Try sample request</button>
-  </body>
+  </body> -->
 </html>
